--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "next build",
     "start": "next start",
     "test": "jest --watch",
+    "coverage": "jest --coverage",
     "test:ci": "jest --ci"
   },
   "dependencies": {
