--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "@types/react": "18.2.45",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "typescript": "5.3.3"
+    "typescript": "^5.7.3"
   }
 }
